--- a/styles/Home.css
+++ b/styles/Home.css
@@ -6,10 +6,16 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 60%, #000 100%), url("/images/Presentacion/bosque1.jpg");
+    background-size: cover;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     min-height: 100vh;
     padding: 20px;
+    color: white;
 }
+
 
 .container {
     max-width: 1200px;
