--- a/views/detalle-animal.ejs
+++ b/views/detalle-animal.ejs
@@ -13,9 +13,9 @@
 <body>
     <div class="container fade-in">
 
-        <!-- 🔥 TOP NAV FINAL Y CORRECTO -->
+        
         <div class="top-nav">
-            <a href="/animales" class="btn-back">
+            <a href="/" class="btn-back">
                 <span>⬅️</span> Volver al Listado
             </a>
 
